(crawler) More effective task scheduling in the crawler
This should hopefully allow more threads to be busy